@@ -8,6 +8,77 @@ Newest entry first; every non-approval is recorded, including one a repair later
 **Test-only metadata shadowed shipped registrations**
 
 The generated test-only reachability metadata duplicated shipped registrations for POJODefinition, array types, LinkedHashMap, and TreeMap behind test-class conditions, so those registrations could satisfy native tests without exercising the shipped library-conditioned entries. It also contained unstable $$Lambda/0x... conditions and nanoTime-derived missing-class targets, which are not stable valid evidence. The contribution additionally changed tracked native test-result XML even though that generated path is repository-ignored.
+## 2026-09-22 — org.relaxng:jing:20181222 (#10162)
+
+**Stale generated library coverage statistics**
+
+The committed stats did not match deterministic generation from the contribution: the first Forge finalization pass changed instruction/line/method covered counts from 14944/3138/902 to 14986/3146/904. The resulting publishable-tree mutation proved the checked-in derived statistics were stale and required regeneration before approval.
+
+## 2026-09-22 — org.apache.tomcat.embed:tomcat-embed-core:11.0.22 (#10144)
+
+**Generated metadata captured machine-local temporary resources**
+
+The contribution added absolute /tmp/junit... resource globs for HostConfig descriptor defaults and retained stale JAAS temporary-file globs in test-only metadata. Machine-local temporary paths must use normal file APIs rather than Native Image resource metadata under FS-test-contract.4.4.
+
+## 2026-09-22 — org.apache.tomcat.embed:tomcat-embed-core:11.0.22 (#10144)
+
+**Completed dynamic-access classes lacked dedicated test files**
+
+The exhaust report marked org.apache.naming.factory.DataSourceLinkFactory$DataSourceHandler and org.apache.tomcat.util.descriptor.web.SetPublicIdRule as completed, but the original contribution had no dedicated DataSourceLinkFactoryInnerDataSourceHandlerTest or SetPublicIdRuleTest. This violated the one-file-per-dynamic-access-class requirement in §FS-test-contract.1.8.
+
+## 2026-09-21 — org.jetbrains.kotlin:kotlin-daemon-embeddable:2.4.20 (#9926)
+
+**Generated tests violated metadata-generation and bounded-wait contracts**
+
+The added build.gradle generated reflection-config.json and resource-config.json under META-INF/native-image, contrary to FS-test-contract.2.7, and the loopback socket test left accept and read operations unbounded, contrary to FS-test-contract.1.6. These were contribution-local violations. Finalization passing all three native lanes after removal also proved the generated legacy configuration placeholders were unnecessary.
+
+## 2026-09-21 — net.bytebuddy:byte-buddy-agent:1.12.4 (#9360)
+
+**Generated test shadows an optional dependency API type**
+
+The contribution declared tests/src/net.bytebuddy/byte-buddy-agent/1.12.4/src/test/java/com/ibm/tools/attach/VirtualMachine.java in the real com.ibm.tools.attach package to make the optional J9 attachment path available. This is a source shadow for a dependency API and violates FS-test-contract.2.3 and FS-contribution-contract.4.7.
+
+## 2026-09-21 — com.azure:azure-data-appconfiguration:1.8.4 (#10070)
+
+**Native Image build flags were scoped too broadly**
+
+`build.gradle` applied four class-initialization arguments to `graalvmNative.binaries.all`, contrary to the narrowest-flag requirement in `FS-test-contract.2.7`. Removing the flags reproduced image-heap failures for `NOPLoggerFactory`, `SubstituteLoggerFactory`, `Base64Variant`, and `Base64Variant$PaddingReadBehaviour`, establishing that the transitive Azure/Jackson/SLF4J paths require them; only their binary scope needed correction.
+
+## 2026-09-20 — com.azure:azure-identity:1.18.0 (#10071)
+
+**Native-image initialization flags were scoped to all binaries**
+
+The coordinate build applied its class-specific initialization flags through graalvmNative.binaries.all rather than the test binary. FS-test-contract.2.7 requires native build flags to be as narrow as possible. Removing the flags reproduced the transitive Azure Core image-heap initialization failure, confirming that the flags themselves are necessary; only their binary scope needed correction.
+
+## 2026-09-20 — org.aspectj:aspectjweaver:1.9.21.1 (#9373)
+
+**Test-created native flag and weakened runtime coverage**
+
+The contribution rewrote a test class file to preview bytecode and added --enable-preview to the JVM and Native Image solely for that test, violating the native flag necessity rule in FS-test-contract.2.7 because the need originated in test code rather than AspectJ. It also removed the existing generated-concrete-aspect behavior from ClassLoaderWeavingAdaptorTest instead of preserving that meaningful behavior, violating the no-weakening repair rule in FS-test-contract.2.9.
+
+## 2026-09-20 — org.checkerframework:checker-qual:3.46.0 (#9374)
+
+**Generated Java test class was not public**
+
+The added Checker_qualTest top-level class was declared package-private, violating FS-test-contract.1.2, which requires every top-level test class to be public. The violation was wholly within the target coordinate's new test source and was repairable under FS-contribution-contract.5.1.
+
+## 2026-09-18 — org.xerial.snappy:snappy-java:1.1.0.1 (#10048)
+
+**Native Image coverage was bypassed by test-created runtime class loading**
+
+The original test created child-loaded copies of the library and test providers with URLClassLoader.defineClass, then wrapped the entire library exercise in NativeImageSupport.runToleratingUnsupportedFeature. Because the unsupported operation came from the test harness rather than unavoidable library behavior, Native Image could accept the class-definition failure before executing the Snappy assertions, violating the native-execution and no-runtime-class-definition rules. The accompanying --add-opens native build flag was also unnecessary for the repaired public-API path.
+
+## 2026-09-18 — io.micronaut:micronaut-http-client-core:5.1.11 (#10079)
+
+**Test dependencies pin the requested artifact version**
+
+The coordinate build script hardcoded version 5.1.11 for micronaut-http-client and micronaut-inject-java instead of using the TCK-selected library version. This violated the version-agnostic test requirement in §FS-test-contract.2.5 because a copied suite would continue resolving those dependencies at 5.1.11.
+
+## 2026-09-15 — org.springframework.integration:spring-integration-sftp:7.1.1 (#9952)
+
+**Unbounded asynchronous reply waits in generated tests**
+
+Two SFTP outbound-gateway assertions used QueueChannel.receive() without a timeout, so a missing reply could wait indefinitely in violation of §FS-test-contract.1.6.
 ## 2026-09-15 — org.apache.sshd:sshd-core:2.18.0 (#9958)
 
 **New-library contribution has zero dynamic-access coverage**
